<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/FullWidthDialog"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addNoteLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/titleEdt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxHeight="48dp"
            android:hint="@string/title"
            android:background="@drawable/edt_bg"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:fontFamily="@font/tagesschrift_regular"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/noteEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:hint="@string/note"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_bg"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:fontFamily="@font/tagesschrift_regular"
            android:textStyle="normal"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_note"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>