<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showItemsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/showEmptyLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@color/text_color"
            app:fontFamily="@font/tagesschrift_regular"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textAllCaps="false"
            android:letterSpacing="0.05"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/tagesschrift_regular"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/add_new_note"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fab96"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/fab_desc"
        />


</RelativeLayout>
